--- a/.env
+++ b/.env
@@ -13,10 +13,15 @@ JWT_ALGORITHM = "HS256"
 JWT_SECRET_KEY = "kgFOGgkfDPIOGKJfd"
 
 BASE_URL = "localhost"
-PORT_SERVICE = "8000"
 OTHER_SERVICES = "AUTHETICATION, TEST"
+
+PORT_SERVICE_AUTH = "8080"
+PORT_SERVICE_USERS = "8000"
+
+
 
 REDIS_HOST = "redis"
 REDIS_PORT = "6379"
 REDIS_DB = "0"
 REDIS_PASSWORD = None
+
