--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.black]
-line-length = 100
+line-length = 88
 skip-string-normalization = false
 
 [tool.isort]
@@ -29,6 +29,11 @@ pydantic-settings = "^2.0.3"
 tools-openverse = {git = "https://github.com/Javicle/_ToolsOpenVerse.git"}
 asyncpg = "^0.30.0"
 pytest = "^8.3.4"
+python-multipart = "^0.0.20"
+opentelemetry-instrumentation-fastapi = "^0.51b0"
+opentelemetry-sdk = "^1.30.0"
+opentelemetry-exporter-otlp-proto-http = "^1.30.0"
+app-starter = {git = "https://github.com/Javicle/_AppStarter"}
 
 [build-system]
 requires = ["poetry-core"]
